# docv

./: Cargo.toml  typos.toml
docv-cli/: Cargo.toml
docv-cli/src/: main.rs
docv-pdf/: Cargo.toml
docv-pdf/src/: document.rs  error.rs  info.rs  lib.rs  objects.rs  pages.rs  parser.rs  process_stream.rs  structures.rs  types.rs  xref.rs
docv-pdf/src/parser/: array.rs  basic_types.rs  boolean.rs  date.rs  dictionary.rs  file.rs  grammar_parser.rs  indirect_object.rs  mod.rs  name.rs  null.rs  numeric.rs  object.rs  object_stream.rs  pdf2.pest  process_stream_buffer.rs  stream.rs  string.rs  whitespace.rs
docv-pdf/src/structures/: hash.rs  info.rs  mod.rs  object_stream.rs  page.rs  root.rs  version.rs  xref.rs
docv-pdf/src/structures/page/: resources.rs
docv-pdf/src/structures/root/: names.rs  pages.rs  pages_tree.rs  version.rs
docv-pdf/src/types/: array.rs  dictionary.rs  indirect_object.rs  mod.rs  name.rs  numeric.rs  object.rs  stream.rs  string.rs
docv-pdf/src/types/array/: rectangle.rs
docv-ui/: Cargo.toml
docv-ui/src/: app.rs  cli.rs  error.rs  lib.rs  main.rs
docv-ui/src/app/: cmdline.pest  cmdline.rs  document.rs
rdocv-pdf/: Cargo.toml
rdocv-pdf/src/: lib.rs  pdf2.pest
rdocv-pdf/src/parser/: parser.rs
