[package]
name = "docv-pdf"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
flate2 = { version = "1.1", features = ["zlib"] }
memmap2 = "0.9"
nom = "8.0"
smol_str = "0.3.4"
snafu = { version = "0.8", features = ["rust_1_81"] }
