[package]
name = "docv-ui"
version = "0.0.1"
edition = "2024"

[dependencies]
docv-pdf = { path = "../docv-pdf" }

clap = { version = "4.5", features = ["derive"] }
iced = { version = "0.13", features = ["tokio", "wgpu"] }
pest = { version = "2.7", features = ["pretty-print"] }
pest_derive = "2.7"
thiserror = "2.0"
tokio = { version = "1.43", features = ["rt", "macros", "parking_lot", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["parking_lot"] }

[build-dependencies]
